--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">CurrentWeatherDataBinding</string>
+    <string name="app_name">WeatherApp</string>
     <string name="API_KEY">d6843ab8ee963f5d372296dfff62aed7</string>
     <string name="city_prompt">Enter the name of the city</string>
     <string name="add">ADD</string>
     <string name="temperature">Temperature: %s</string>
     <string name="type">Type: %s</string>
-    <string name="wind_speed">Wind Speed:</string>
+    <string name="wind_speed">Wind Speed: %s</string>
     <string name="wind_direction_deg">Wind direction (deg): %s</string>
     <string name="weather_clear">Clear</string>
     <string name="weather_clouds">Clouds</string>
